# po_projekt_02

./: README.md
server/: README.md  client.rest  pyproject.toml
server/src/usermanager/: controllers.py  main.py  repositories.py
server/tests/integration/: test_endpoints.py  text_endpoints.py
server/tests/unit/: test_controllers.py  test_repositories.py
