[project]
name = "usermanager"
version = "0.1.0"
description = ""
authors = [
    {name = "KacDabQ",email = "u118_kacdab_waw@technischools.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "usermanager", from = "src"}]

[tool.poetry.scripts]
start = "usermanager.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
